@@ -113,6 +113,7 @@ $Id$
 + [interface] AJAXification on various pages 
 - [core] Remove last remaining parts of profiling code which was removed in 2006.
 - bug #3042665 [parser] Add workaround for MySQL way of handling backtick.
+- bug #3056610 [interface] Removed modification options for information_schema 
 
 3.3.7.0 (not yet released)
 - patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
